MMCPA-2142: Removing IE specfici css which caused the spacing issue for select address button for saved addresses on checkout.

--- a/docroot/themes/custom/alshaya_white_label/sass/_hotfix.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/_hotfix.scss
@@ -272,11 +272,6 @@ html[lang=ar] {
   }
 }
 
-.ie .address .address--options {
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-}
-
 .ie .address .address--primary span::before,
 .ie .address .address--primary a::before {
   margin-top: 30px !important;
